# FSD_Rebased_Cpp

./: CMakeLists.txt  Client.cpp  Client.h  Global.cpp  Global.h  Mysql.cpp  Mysql.h  README.md  Redis.cpp  Redis.h  Server.cpp  Server.h  Settings.cpp  Settings.h  Weather.cpp  Weather.h  enums.h  main.cpp
pdu/: client_properties.h  serializer.cpp  serializer.h
pdu/pdu/: pdu_add_atc.cpp  pdu_add_atc.h  pdu_add_pilot.cpp  pdu_add_pilot.h  pdu_atc_position.cpp  pdu_atc_position.h  pdu_auth_challenge.cpp  pdu_auth_challenge.h  pdu_auth_response.cpp  pdu_auth_response.h  pdu_base.cpp  pdu_base.h  pdu_broadcast_message.cpp  pdu_broadcast_message.h  pdu_change_server.cpp  pdu_change_server.h  pdu_client_identification.cpp  pdu_client_identification.h  pdu_client_query.cpp  pdu_client_query.h  pdu_client_query_response.cpp  pdu_client_query_response.h  pdu_delete_atc.cpp  pdu_delete_atc.h  pdu_delete_pilot.cpp  pdu_delete_pilot.h  pdu_fast_pilot_position.cpp  pdu_fast_pilot_position.h  pdu_flight_plan.cpp  pdu_flight_plan.h  pdu_format_exception.h  pdu_hand_off.cpp  pdu_hand_off.h  pdu_hand_off_acknowledge.cpp  pdu_hand_off_acknowledge.h  pdu_kill_request.cpp  pdu_kill_request.h  pdu_metar_request.cpp  pdu_metar_request.h  pdu_metar_response.cpp  (+25 more)
redis++/include/sw/redis++/: cmd_formatter.h  connection.h  reply.h
redis++/lib/pkgconfig/: redis++.pc
redis++/share/cmake/redis++/: redis++-targets-release.cmake  redis++-targets.cmake
